# SwoopInfo

./: .flutter-plugins-dependencies  .gitignore  AGENTS.md  README.md  TAXONOMY_AUDIT.md  pubspec.yaml  requirements.txt
.dart_tool/: package_config.json  package_graph.json
app/: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
app/api/: chat.py  chunks.py  generate.py  generate_stream.py  labor_times.py  navigation.py  parts_pricing.py  qa.py  vehicles.py  verify.py
app/models/: chunk.py  generation.py  vehicle.py
app/scripts/: migrate_vehicle_keys.py  seed_common_vehicles.py  test_and_seed.py  test_smart_search.py  test_vehicle_key_normalization.py
app/services/: advanced_generator.py  brave_search.py  carquery.py  chunk_generator.py  concern_mapper.py  content_id_generator.py  ddg_client.py  deterministic_generator.py  document_assembler.py  nhtsa.py  nhtsa_complaints.py  openrouter.py  performance.py  pre_generator.py  qa_agent.py  qa_repair.py  qa_scheduler.py  real_generator.py  schema_service.py  smart_search.py  supabase_client.py  svg_generator.py  tavily_client.py  template_loader.py  template_service.py  vehicle_onboarding.py  vehicle_validator.py  vehicledatabases.py  vision.py
app/tests/: test_api_integration.py  test_contamination_guard.py  test_model_setup.py  test_safety_critical_visibility.py
assets/data/: nav_tree.json  (+5 more)
linux/: CMakeLists.txt
scripts/: generate_leaf.py  prewarm_diagrams.py
test/: chunk_status_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+20 files in other folders)
