[project]
name = "swoop-intelligence"
version = "1.0.0"
description = "Chunk-based automotive service intelligence platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "supabase>=2.3.0",
    "httpx>=0.24,<0.28",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.3.0",
    "ddgs>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
